# grpc-test

envoy/: README.md  envoy.yaml  start_envoy.bat  start_envoy.sh
grpc-dart/: README.md  compile_protos.bat  pubspec.yaml
grpc-mt5/: .gitignore  Makefile  README.md  pyproject.toml
grpc-mt5/envoy/: generate_certificates.sh  readme.txt  start_envoy.bat
grpc-mt5/envoy/mount/: envoy.yaml  envoy_tls.yaml  server.crt  server.key
grpc-mt5/grpc_autocode/: Account_pb2.py  Account_pb2_grpc.py  Candles_pb2.py  Candles_pb2_grpc.py  Deals_pb2.py  Deals_pb2_grpc.py  Orders_pb2.py  Orders_pb2_grpc.py  Positions_pb2.py  Positions_pb2_grpc.py  ServerInfo_pb2.py  ServerInfo_pb2_grpc.py  Symbols_pb2.py  Symbols_pb2_grpc.py
grpc-mt5/mt5_grpc/: main.py
grpc-mt5/mt5_grpc/services/: account_service.py  candles_service.py  deals_service.py  orders_service.py  positions_service.py  server_info.py  symbols_service.py
grpc-mt5/mt5_grpc/services/metatrader/: client.py  typings.py
grpc-mt5/proto-files/: Account.proto  Candles.proto  Deals.proto  Orders.proto  Positions.proto  ServerInfo.proto  Symbols.proto
grpc-python/: Makefile  Pipfile  README.md  client.py  compile_protos.bat  pyproject.toml  start_envoy.bat  start_server.bat
grpc-python/autocode/: helloworld_pb2.py
grpc-python/grpc_python/: client.py  server.py
grpc-python/grpc_python/autocode/: greeter_pb2.py
grpc-python/grpc_python/grpc_auto/: greeter_pb2_grpc.py
grpc-python/grpc_python/services/: greeter_service.py
grpc-svelte/: .prettierrc  package-lock.json  package.json
grpc-web-test/: README.md
(+45 files in other folders)
